test/Fail/Issue2059.err
Issue2059.agda:32.13-20: warning: -W[no]RewriteVariablesNotBoundByLHS
obvious  is not a legal rewrite rule, since the following variables are not bound by the left hand side:  p
when checking the pragma REWRITE obvious

Issue2059.agda:35.10-14: error: [UnequalTerms]
b ∧ b != false of type Bool
when checking that the expression refl has type (b ∧ b) ≡ false
